testing dependencies fixes, compensation overlap logic changes, and concurrent changes locks machanism added